--- a/package.json
+++ b/package.json
@@ -13,15 +13,25 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
-    "next": "14.2.5",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@tabler/icons-react": "^3.19.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.1",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
     "swiper": "^11.1.9",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
+    "@types/node": "22.7.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
